fixed incallUI z-index shit
GEGE

--- a/NierDance.theme.css
+++ b/NierDance.theme.css
@@ -251,8 +251,7 @@ img[src="/assets/8d8f815f3d81a33b1e70ec7c22e1b6fe.png"] + div:before {content:""
 .callAvatar-v-u4BM.voice-2D-tt_ {border-radius: 12%}
 .callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI {border-radius: 12%}
 .video-1FfuMD {background-color: rgba(48, 47, 48, 0.35)}
-.theme-dark .wrapper-29NfPK {background-color: transparent}
-
+.theme-dark .wrapper-29NfPK {background-color: transparent;z-index:0 !Important}
 
 
 /* Setting Icons */
